--- a/flexbox_2.html
+++ b/flexbox_2.html
@@ -133,7 +133,7 @@
     
     .asideitem {
       border: 1px solid black;
-      height: 25px;
+      height: 30px;
       width: 15vw;
     }
     
@@ -271,7 +271,7 @@
     <div class="footer2redbox"></div>
   </div>
   
-  <div>Copyright All rights reserved.</div>
+  <div>©Copyright All rights reserved.</div>
  </div>
 </footer>
 </body>
