--- a/flexbox_7.html
+++ b/flexbox_7.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ArellanoFlexbox7</title>
+    <title>ArellanoFlexbox6</title>
 </head>
 <style>
     * {
@@ -35,7 +35,7 @@
         justify-content: space-between;
     }
 
-    .hey {
+    .ambot {
         display: flex;
         align-items: center;
         margin: 2px;
@@ -48,19 +48,19 @@
         width: 40px;
     }
 
-    .navt {
+    .navmain {
         display: flex;
         gap: 2px;
         margin: 2px;
     }
 
-    .navtwoboxes {
+    .navmain2boxes {
         background-color: red;
         height: 30px;
         width: 50px;
     }
 
-    .middle {
+    .center {
         display: flex;
         gap: 4px;
         flex-grow: 1;
@@ -81,7 +81,7 @@
     
     }
 
-    .middlefirst {
+    .centerfirst {
         display: flex;
         justify-content: space-around;
         align-items: baseline;
@@ -90,7 +90,7 @@
         border: 1px solid black;
     }
 
-    .middlefirstboxes1 {
+    .centerfirstboxes1 {
         border: 1px solid black;
         height: 150px;
         width: 180px;
@@ -98,7 +98,7 @@
 
     }
 
-    .middlefirstboxes2 {
+    .centerfirstboxes2 {
         border: 1px solid black;
         height: 150px;
         width: 180px;
@@ -107,7 +107,7 @@
     }
 
 
-    .middlesecond {
+    .centersecond {
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
@@ -118,7 +118,7 @@
         border: 1px solid black;
     }
 
-    .middlesecondboxes {
+    .centersecondboxes {
         border: 1px solid black;
         height: 80px;
         width: 80px;
@@ -182,48 +182,48 @@
 
 
     <nav>
-        <div class="hey">
+        <div class="ambot">
             <div class="navboxone"></div>
-            <div class="navflexbox">Flexbox</div>
+            <div class="navflexbox">FLEXBOX</div>
         </div>
-        <div class="navt">
-            <div class="navtwoboxes"></div>
-            <div class="navtwoboxes"></div>
+        <div class="navmain">
+            <div class="navmain2boxes"></div>
+            <div class="navmain2boxes"></div>
         </div>
     </nav>
 
-    <div class="middle">
+    <div class="center">
         <main>
 
-            <div class="middlesecond">
-                <div class="middlesecondboxes"></div>
-                <div class="middlesecondboxes"></div>
-                <div class="middlesecondboxes"></div>
-                <div class="middlesecondboxes"></div>
-                <div class="middlesecondboxes"></div>
-                <div class="middlesecondboxes"></div>
-                <div class="middlesecondboxes"></div>
-                <div class="middlesecondboxes"></div>
-                <div class="middlesecondboxes"></div>
-                <div class="middlesecondboxes"></div>
-                <div class="middlesecondboxes"></div>
-                <div class="middlesecondboxes"></div>
-                <div class="middlesecondboxes"></div>
-                <div class="middlesecondboxes"></div>
-                <div class="middlesecondboxes"></div>
-                <div class="middlesecondboxes"></div>
-                <div class="middlesecondboxes"></div>
+            <div class="centersecond">
+                <div class="centersecondboxes"></div>
+                <div class="centersecondboxes"></div>
+                <div class="centersecondboxes"></div>
+                <div class="centersecondboxes"></div>
+                <div class="centersecondboxes"></div>
+                <div class="centersecondboxes"></div>
+                <div class="centersecondboxes"></div>
+                <div class="centersecondboxes"></div>
+                <div class="centersecondboxes"></div>
+                <div class="centersecondboxes"></div>
+                <div class="centersecondboxes"></div>
+                <div class="centersecondboxes"></div>
+                <div class="centersecondboxes"></div>
+                <div class="centersecondboxes"></div>
+                <div class="centersecondboxes"></div>
+                <div class="centersecondboxes"></div>
+                <div class="centersecondboxes"></div>
             </div>
 
             <div class="namo">
-                <div class="middlefirst">
-                    <div class="middleboxes1">
-                        <div class="middlefirstboxes1"></div>
-                        <div class="middlefirstboxes1"></div>
+                <div class="centerfirst">
+                    <div class="centerboxes1">
+                        <div class="centerfirstboxes1"></div>
+                        <div class="centerfirstboxes1"></div>
                     </div>
-                    <div class="middleboxes2">
-                        <div class="middlefirstboxes2"></div>
-                        <div class="middlefirstboxes2"></div>
+                    <div class="centerboxes2">
+                        <div class="centerfirstboxes2"></div>
+                        <div class="centerfirstboxes2"></div>
                     </div>
                 </div>
             </div>
@@ -246,7 +246,7 @@
     <footer>
         <div class="footerfirst">
             <div class="footerbox"></div>
-            <div class="footerflexbox">Flexbox</div>
+            <div class="footerflexbox">FLEXBOX</div>
         </div>
 
         <div class="footersecond"></div>
