--- a/flexbox_9.html
+++ b/flexbox_9.html
@@ -174,7 +174,7 @@
                 <div class="mred"></div>
                 <div class="mtext">
                     <div class="mflex">FLEXBOX</div>
-                    <div class="mright">©Copyright All rights reserved.</div>
+                    <div class="mright">COPYRIGHT FLEXBOX</div>
                 </div>
             </div>       
             <div class="foots">
